# imessagedb

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  pyproject_poetry.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  index.md  make.bat
docs.o/: conf.py  make.bat
docs.o/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  example.doctree  index.doctree
docs.o/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs.o/_build/html/_sources/: example.ipynb.txt
docs.o/_build/jupyter_execute/: example.ipynb
src/imessagedb/: __init__.py  __main__.py  attachment.py  attachments.py  chat.py  chats.py  convert.py  db.py  default.ini  generate_html.py  handle.py  handles.py  html.py  imessagdb.py  message.py  messages.py  test_progress.py  text.py  utils.py
tests/: chat.db  imessagedb_test.py  test_attachments.py  test_chat.py  test_connect.py  test_db.py  test_handle.py  test_imessagedb.py
