[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imessagedb"
version = "1.0.1"
description = "Reads the Apple iMessage database"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
    'alive-progress',
    'ffmpeg-python',
    'heic2png',
    'configparser',
    'termcolor'
]

[project.scripts]
imessagedb = "imessagedb:run"