[tool.poetry]
name = "imessagedb"
version = "1.0.1"
description = "Reads and displays the Apple iMessage database"
authors = ["xev <git@schore.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alive-progress = "^3.1.2"
ffmpeg-python = "^0.2.0"
heic2png = "^1.0.0"
configparser = "^5.3.0"
termcolor = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
myst-nb = {version = "^0.17.2", python = "^3.9"}
sphinx-autoapi = "^2.1.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
