[tool.poetry]
name = "imessagedb"
version = "1.4.7"
description = "Reads and displays the Apple iMessage database"
authors = ["xev <git@schore.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alive-progress = "^3.1.2"
ffmpeg-python = "^0.2.0"
heic2png = "^1.0.0"
configparser = "^5.3.0"
termcolor = "^2.3.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
myst-nb = {version = "^0.17.2", python = "^3.9"}
sphinx-autoapi = "^2.1.0"
sphinx-rtd-theme = "^1.2.0"
python-semantic-release = "^7.33.4"

[tool.poetry.scripts]
imessagedb = 'imessagedb:run'

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
